<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header Section: Shopping List Title -->
    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grocery_list"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Add Ingredients Icon -->
    <ImageView
        android:id="@+id/addIngredientsButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/add_ingredients"
        android:src="@drawable/upload_icon"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/searchIngredientsButton" />

    <!-- Search Ingredients Icon -->
    <ImageView
        android:id="@+id/searchIngredientsButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/search_ingredients"
        android:src="@drawable/search_icon"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <!-- TextView for Shopping List Status -->
    <TextView
        android:id="@+id/groceryStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grocery_list_empty_text"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="0dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/headerText"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- RecyclerView for Shopping List Items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_grocery_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/groceryStatusText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clearShoppingListButton"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Clear Shopping List Button -->
    <ImageView
        android:id="@+id/clearShoppingListButton"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:src="@drawable/clear_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
