...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center">

            <Button
                android:id="@+id/viewPantryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_pantry"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/viewCookbookButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_cookbook"
                android:layout_marginStart="8dp"/>

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generate_recipes"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/viewGroceryListButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_grocery_list"
                android:layout_marginStart="8dp" />

...
